[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"
 
[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
lazy_static = "1.4.0"
thiserror = "1.0.50"
pest = "2.7.5"
pest_derive = "2.7.5"
unreachable = "1.0.0"
pest_typed = "*"
pest_typed_derive = "*"
num_enum = "0.7.1"
bit-set = "0.5.3"
itertools = "0.12.0"